--- a/setup.cfg
+++ b/setup.cfg
@@ -129,7 +129,7 @@ source-dir = docs
 
 
 [tox:tox]
-envlist = flake8,mypy,py{36,37,38,39},coverage,bandit
+envlist = flake8,mypy,py{36,37,38,39,310},coverage,bandit
 skip_missing_interpreters = true
 
 
@@ -146,8 +146,7 @@ sitepackages = false
 deps =
   coverage
   docutils
-  mock
-  nose
+  nose-py3
 
 download = true
 
