--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ classifiers =
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
+  Programming Language :: Python :: 3.10
   Topic :: Software Development :: Build Tools
 
 
@@ -50,7 +51,6 @@ zip_safe = False
 install_requires =
   appdirs
   koji
-  enum34 ; python_version < '3.4'
   typing_extensions ; python_version < '3.8'
 
 tests_require =
