--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -39,7 +39,6 @@ jobs:
       fail-fast: false
       matrix:
         python-version:
-          - '3.6'
           - '3.7'
           - '3.8'
           - '3.9'
@@ -53,6 +52,10 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Install system dependencies
+      run: |
+        sudo apt-get install python3-gssapi
 
     - name: Install python dependencies
       run: |
