--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -55,7 +55,7 @@ jobs:
 
     - name: Install system dependencies
       run: |
-        sudo apt-get install python3-gssapi
+        sudo apt-get install libkrb5-dev
 
     - name: Install python dependencies
       run: |
