--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -32,7 +32,7 @@ on:
 
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
 
     strategy:
@@ -63,6 +63,42 @@ jobs:
 
     - name: Running tox
       run: tox
+
+    - name: Collect coverage results
+      uses: actions/upload-artifact@v3
+      with:
+        path: '.coverage.py*'
+
+  coverage:
+    runs-on: ubuntu-latest
+
+    needs:
+      - tests
+
+    strategy:
+      fail-fast: true
+
+    steps:
+      - name: Fetch coverage results
+        uses: actions/download-artifact@v3
+        with:
+          path: '.coverage.py*'
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+
+      - name: Install python dependencies
+        run: |
+          pip install tox tox-gh-actions
+
+      - name: Coverage report
+        run: |
+          tox -e coverage
+
+      - name: Upload to coveralls
+        uses: coverallsapp/github-action@v2
 
 
 # The end.
