--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -80,6 +80,9 @@ jobs:
       - tests
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Fetch coverage results
         uses: actions/download-artifact@v3
         with:
