--- a/setup.cfg
+++ b/setup.cfg
@@ -199,6 +199,9 @@ commands =
   python -B -m coverage report
   python -B -m coverage html
 
+deps =
+  coverage
+
 
 [testenv:sphinx]
 
@@ -282,7 +285,7 @@ mypy_path = stubs/
 python =
   3.7: py37
   3.8: py38
-  3.9: py39, flake8, bandit
+  3.9: py39
   3.10: py310
 
 
