--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -46,6 +46,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
+          cache: 'pip'
 
       - name: Install system dependencies
         run: |
@@ -87,6 +88,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
 
       - name: Install system dependencies
         run: |
@@ -127,6 +129,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
+          cache: 'pip'
 
       - name: Install system dependencies
         run: |
