Enable GitHub Actions (#129)
enable github actions for pre-tests, tests, and coverage upload

--- a/setup.cfg
+++ b/setup.cfg
@@ -135,11 +135,10 @@ skip_missing_interpreters = true
 
 [testenv]
 setenv =
-  KSD_MERGE_PYI = 0
   COVERAGE_FILE = .coverage.{envname}
 
 commands =
-  coverage run -m nose
+  python -B -m coverage run -m nose
 
 sitepackages = false
 
@@ -196,9 +195,12 @@ setenv =
 basepython = python
 
 commands =
-  coverage combine
-  coverage report
-  coverage html
+  python -B -m coverage combine
+  python -B -m coverage report
+  python -B -m coverage html
+
+deps =
+  coverage
 
 
 [testenv:sphinx]
@@ -221,9 +223,9 @@ verbosity = 2
 
 [coverage:run]
 
-include =
-  koji_cli_plugins/*
-  kojismokydingo/*
+source =
+  koji_cli_plugins
+  kojismokydingo
 
 omit =
   *.pyi
@@ -277,6 +279,14 @@ no_site_packages = False
 ignore_missing_imports = True
 strict_optional = False
 mypy_path = stubs/
+
+
+[gh-actions]
+python =
+  3.7: py37
+  3.8: py38
+  3.9: py39
+  3.10: py310
 
 
 #
