--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,8 @@ author = Christopher O'Brien
 author_email = obriencj@gmail.com
 
 license = GNU General Public License v3 (GPLv3)
-license_file = LICENSE
+license_files =
+  LICENSE
 
 long_description = file: README.md
 long_description_content_type = text/markdown
