sphinx followed setuptool in bad example

--- a/setup.cfg
+++ b/setup.cfg
@@ -110,7 +110,6 @@ kojismokydingo =
 # lines of code from setuptools, despite the test command being the
 # most convenient and available way to get started with unit testing.
 
-docs = build_sphinx
 test = nosetests
 
 
@@ -209,10 +208,12 @@ deps =
 basepython = python3.9
 
 commands =
-  python -B setup.py docs
+  python -B setup.py build_sphinx
 
+# sphinx 7 not only doesn't have a build_sphinx command, but it also
+# completely ignores the settings in setup.cfg
 deps =
-  sphinx
+  sphinx<7
 
 
 [nosetests]
