make py36 work under python 3.11

--- a/setup.cfg
+++ b/setup.cfg
@@ -150,6 +150,16 @@ deps =
 download = true
 
 
+[testenv:py36]
+
+# this prevents systems with newer pythons from exploding. For some
+# reason virtualenv tries to run the venv's pip with its own python
+# version, not the matching one. Due to insanity with the recent
+# python leadership, there are breaking API changes in 3.11 and
+# onwards which make the vendored 3.6 site packages fail.
+download = false
+
+
 [testenv:bandit]
 
 basepython = python3.9
