--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,6 @@
-# Github Action definition for publishing to PyPI when a release is
-# tagged.
+# Github Action definition for publishing assets to the release and to
+# PyPI when a release is tagged. Also emits a notification post to
+# mastodon
 
 
 name: Release Assets
@@ -12,7 +13,7 @@ on:
 
 jobs:
 
-  build:
+  build-dist:
     runs-on: ubuntu-latest
 
     strategy:
@@ -26,6 +27,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
+
+      - name: Record version
+        run: |
+          python setup.py --version >> dist/VERSION
+          cat dist/VERSION >> $GITHUB_STEP_SUMMARY
 
       - name: Install system packages
         run: |
@@ -49,17 +55,20 @@ jobs:
           name: py-dist
           path: dist/
 
-  rpms:
+  build-rpms:
     name: Trigger RPM builds
     uses: ./.github/workflows/rpms.yml
 
-  assets:
+  attach-assets:
     name: Attach assets to release
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+
     needs:
-      - build
-      - rpms
+      - build-dist
+      - build-rpms
 
     steps:
       - name: Checkout
@@ -85,6 +94,8 @@ jobs:
             dist/*.whl \
             dist/*.src.rpm \
             dist/*/RPMS/noarch/*.rpm
+        env:
+          GITHUB_TOKEN: ${{ github.TOKEN }}
 
   pypi:
     name: Upload release to PyPI
@@ -107,28 +118,33 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
 
   announce:
-    name: Announce release to @obriencj@fosstodon.org
+    name: Announce release
     runs-on: ubuntu-latest
 
     needs:
-      - artifacts
+      - attach-assets
       - pypi
 
     steps:
-      - name: Get current date
-        id: date
-        run: echo "RELEASE_DATE=$(date +'%Y-%m-%d')" >> "$GITHUB_ENV"
-
-      - name: Create announcement post
-        uses: rzr/fediverse-action@master
+      - name: Fetch python dist content
+        uses: actions/download-artifact@v3
         with:
-          host: fosstodon.org
-          access-token: ${{ secrets.MASTODON_ACCESS_TOKEN }}
+          name: py-dist
 
-          message: |
-            Version ${{ github.ref_name }} of koji-smoky-dingo was released on ${{ env.RELEASE_DATE }}
-            https://github.com/obriencj/koji-smoky-dingo/releases/tag/${{ github.ref_name }}
-            \#koji \#koji-smoky-dingo
+      - name: Get the package version
+        run: |
+          echo "DIST_VERSION=$(cat dist/VERSION)" >> "$GITHUB_ENV"
+
+      - name: Get current date
+        run: |
+          echo "RELEASE_DATE=$(date +'%Y-%m-%d')" >> "$GITHUB_ENV"
+
+      - name: Trigger announcement for ${{ env.DIST_VERSION }}(tag ${{ github.ref_name }}) on ${{ env.RELEASE_DATE }}
+        uses: ./.github/workflows/announce.yml
+        with:
+          version: ${{ env.DIST_VERSION }}
+          date: ${{ env.RELEASE_DATE }}
+          ref: ${{ github.ref_name }}
 
 
 # The end.
