--- a/.github/workflows/rpms.yml
+++ b/.github/workflows/rpms.yml
@@ -43,11 +43,16 @@ jobs:
           tarball: kojismokydingo-${{ env.ksd_version }}.tar.gz
           specfile: kojismokydingo.spec
 
+      - name: Move Source RPM to dist
+        run: |
+          mkdir -p dist
+          mv -v ${{ steps.srpm.outputs.path }} dist/
+
       - name: Store Source RPM
         uses: actions/upload-artifact@v3
         with:
           name: RPM
-          path: ${{ steps.srpm.outputs.path }}
+          path: dist/*.src.rpm
 
 
   build-platform-rpm:
@@ -57,9 +62,9 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - 'fedora30'
-          - 'fedora32'
-          - 'fedora34'
+          # - 'fedora30'
+          # - 'fedora32'
+          # - 'fedora34'
           - 'fedora36'
           - 'fedora37'
           - 'fedora38'
