--- a/.github/workflows/announce.yml
+++ b/.github/workflows/announce.yml
@@ -1,6 +1,13 @@
+# Github Action definition for creating a mastodon release for this
+# project.
+
+
+name: Announce Release
+
+
 on:
   workflow_call:
-    inputs:
+    inputs: &call_inputs
       version:
         description: package version to announce
         required: true
@@ -15,6 +22,9 @@ on:
         description: tag name for this version
         required: true
         type: string
+
+    workflow_dispatch:
+      inputs: *call_inputs
 
 
 jobs:
