--- a/.github/workflows/announce.yml
+++ b/.github/workflows/announce.yml
@@ -7,7 +7,8 @@ name: Announce Release
 
 on:
   workflow_call:
-    inputs: &call_inputs
+    # shame github actions parses yaml with anchors disabled
+    inputs:
       version:
         description: package version to announce
         required: true
@@ -24,7 +25,21 @@ on:
         type: string
 
     workflow_dispatch:
-      inputs: *call_inputs
+    inputs:
+      version:
+        description: package version to announce
+        required: true
+        type: string
+
+      date:
+        description: date the package version was released
+        required: true
+        type: string
+
+      ref:
+        description: tag name for this version
+        required: true
+        type: string
 
 
 jobs:
