--- a/.github/workflows/announce.yml
+++ b/.github/workflows/announce.yml
@@ -55,10 +55,10 @@ jobs:
           host: fosstodon.org
           access-token: ${{ secrets.MASTODON_ACCESS_TOKEN }}
 
-          message: |
+          message: |-
             Version ${{ inputs.version }} of koji-smoky-dingo was released on ${{ inputs.date }}
             https://github.com/obriencj/koji-smoky-dingo/releases/tag/${{ inputs.ref }}
-            \#koji \#koji-smoky-dingo
+            #koji #koji-smoky-dingo
 
 
 # The end.
