--- a/setup.cfg
+++ b/setup.cfg
@@ -88,6 +88,7 @@ koji_smoky_dingo =
   remove-env-var = kojismokydingo.cli.tags:RemoveEnvVar
   remove-rpm-macro = kojismokydingo.cli.tags:RemoveRPMMacro
   renum-tag-inheritance = kojismokydingo.cli.tags:RenumTagInheritance
+  repoquery = kojismokydingo.cli.tags:RepoQuery
   set-env-var = kojismokydingo.cli.tags:SetEnvVar
   set-rpm-macro = kojismokydingo.cli.tags:SetRPMMacro
   swap-tag-inheritance = kojismokydingo.cli.tags:SwapTagInheritance
