--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
 
-  build-dist:
+  build-wheel:
     runs-on: ubuntu-latest
 
     strategy:
@@ -23,27 +23,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
 
-      - name: Record version
+      - name: Record package version
         run: |
-          python setup.py --version >> dist/VERSION
+          python setup.py --version > dist/VERSION
           cat dist/VERSION >> $GITHUB_STEP_SUMMARY
-
-      - name: Install system packages
-        run: |
-          sudo apt-get install -y libssl-dev openssl swig
 
       - name: Install python dependencies
         run: |
           pip install wheel
-
-      - name: Build source distribution
-        run: |
-          python setup.py sdist --output dist
 
       - name: Build binary wheel distribution
         run: |
@@ -52,7 +44,7 @@ jobs:
       - name: Save python dist content
         uses: actions/upload-artifact@v3
         with:
-          name: py-dist
+          name: Wheel
           path: dist/
 
   build-rpms:
@@ -81,12 +73,12 @@ jobs:
       - name: Fetch python dist content
         uses: actions/download-artifact@v3
         with:
-          name: py-dist
+          name: Wheel
 
       - name: Fetch RPMs
         uses: actions/download-artifact@v3
         with:
-          name: RPM
+          name: RPMs
 
       - name: Upload python dist content
         run: |
@@ -102,7 +94,7 @@ jobs:
     runs-on: ubuntu-latest
 
     needs:
-      - build
+      - build-wheel
 
     environment:
       name: pypi
@@ -112,7 +104,7 @@ jobs:
       - name: Fetch python dist content
         uses: actions/download-artifact@v3
         with:
-          name: py-dist
+          name: Wheel
 
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
@@ -129,7 +121,7 @@ jobs:
       - name: Fetch python dist content
         uses: actions/download-artifact@v3
         with:
-          name: py-dist
+          name: Wheel
 
       - name: Get the package version
         run: |
@@ -139,7 +131,9 @@ jobs:
         run: |
           echo "RELEASE_DATE=$(date +'%Y-%m-%d')" >> "$GITHUB_ENV"
 
-      - name: Trigger announcement for ${{ env.DIST_VERSION }}(tag ${{ github.ref_name }}) on ${{ env.RELEASE_DATE }}
+      - name: "\
+        Trigger announcement for ${{ env.DIST_VERSION }}(tag
+        ${{ github.ref_name }}) on ${{ env.RELEASE_DATE }}"
         uses: ./.github/workflows/announce.yml
         with:
           version: ${{ env.DIST_VERSION }}
