koji repoquery command (#134)
implements a repoquery cli command

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 
 [metadata]
 name = kojismokydingo
-version = 2.0.1
+version = 2.1.0
 description =  A collection of Koji client plugins and utils
 
 author = Christopher O'Brien
@@ -52,12 +52,10 @@ zip_safe = False
 install_requires =
   appdirs
   koji
-  typing_extensions ; python_version < '3.8'
+  typing_extensions ; python_version < '3.10'
 
 tests_require =
-  appdirs
   docutils
-  koji
 
 
 [options.entry_points]
@@ -88,6 +86,7 @@ koji_smoky_dingo =
   remove-env-var = kojismokydingo.cli.tags:RemoveEnvVar
   remove-rpm-macro = kojismokydingo.cli.tags:RemoveRPMMacro
   renum-tag-inheritance = kojismokydingo.cli.tags:RenumTagInheritance
+  repoquery = kojismokydingo.cli.tags:RepoQuery
   set-env-var = kojismokydingo.cli.tags:SetEnvVar
   set-rpm-macro = kojismokydingo.cli.tags:SetRPMMacro
   swap-tag-inheritance = kojismokydingo.cli.tags:SwapTagInheritance
@@ -117,8 +116,8 @@ test = nosetests
 # some of the configuration for sphinx. The rest of it lives over in
 # docs/conf.py
 
-version = 2.0
-release = 2.0.1
+version = 2.1
+release = 2.1.0
 
 project = kojismokydingo
 copyright = 2020-2023, Christopher O'Brien
@@ -129,7 +128,7 @@ source-dir = docs
 
 
 [tox:tox]
-envlist = flake8,mypy,py{36,37,38,39,310},coverage,bandit
+envlist = flake8,mypy,py{36,37,38,39,310,311},coverage,bandit
 skip_missing_interpreters = true
 
 
@@ -144,7 +143,6 @@ sitepackages = false
 
 deps =
   coverage
-  docutils
   nose-py3
 
 download = true
@@ -180,7 +178,6 @@ commands =
 
 deps =
   flake8
-  koji
 
 
 [testenv:mypy]
@@ -193,7 +190,6 @@ commands =
 deps =
   mypy
   types-pkg_resources
-  typing_extensions
 
 
 [testenv:coverage]
@@ -211,6 +207,8 @@ commands =
 
 deps =
   coverage
+
+skip_install = True
 
 
 [testenv:sphinx]
@@ -299,6 +297,7 @@ python =
   3.8: py38
   3.9: py39
   3.10: py310
+  3.11: py311
 
 
 #
