haven't updated our classifiers in a bit

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,18 +25,23 @@ project_urls =
   Source = https://github.com/obriencj/koji-smoky-dingo
   Bug Reports = https://github.com/obriencj/koji-smoky-dingo/issues
   Documentation = https://obriencj.github.io/koji-smoky-dingo
+  Discussions = https://obriencj.github.io/koji-smoky-dingo/discussions
 
 classifiers =
+  Development Status :: 5 - Production/Stable
   Environment :: Console
   Intended Audience :: Developers
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+  Natural Language :: English
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
+  Programming Language :: Python :: 3.11
   Topic :: Software Development :: Build Tools
+  Topic :: Utilities
 
 
 [options]
