--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Build Wheel
         run: |
-          python setup.py sdist bdist_wheel --output dist
+          python setup.py sdist bdist_wheel
 
       - name: Store Wheel
         uses: actions/upload-artifact@v3
