--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,8 +87,7 @@ jobs:
         run: |
           gh release upload ${{ github.ref_name }} \
             dist/*.whl \
-            dist/*.src.rpm \
-            dist/*/RPMS/noarch/*.rpm
+            dist/*.rpm
         env:
           GITHUB_TOKEN: ${{ github.TOKEN }}
 
