--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -129,6 +129,9 @@ jobs:
       - pypi
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Fetch python dist content
         uses: actions/download-artifact@v3
         with:
