enable twine testing via tox, but not in actions  [ci skip]

--- a/setup.cfg
+++ b/setup.cfg
@@ -133,7 +133,7 @@ source-dir = docs
 
 
 [tox:tox]
-envlist = flake8,mypy,py{36,37,38,39,310,311},coverage,bandit
+envlist = flake8,mypy,py{36,37,38,39,310,311},coverage,bandit,twine
 skip_missing_interpreters = true
 
 
@@ -183,6 +183,23 @@ commands =
 
 deps =
   flake8
+
+skip_install = True
+
+
+[testenv:twine]
+
+basepython = python3.9
+
+commands =
+  python -B setup.py clean bdist_wheel
+  python -B -m twine check dist/*.whl
+
+deps =
+  twine
+  wheel
+
+skip_install = True
 
 
 [testenv:mypy]
