--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -47,13 +47,10 @@ jobs:
         with:
           python-version: 3.9
 
-      - name: Install system dependencies
+      - name: Install dependencies
         run: |
           sudo apt-get install libkrb5-dev
-
-      - name: Install python dependencies
-        run: |
-          pip install tox tox-gh-actions wheel
+          pip install tox tox-gh-actions
 
       - name: Run Flake8
         run: tox -e flake8
@@ -62,7 +59,14 @@ jobs:
         run: tox -e mypy
 
       - name: Run Bandit
-        run: tox -e bandit
+        run: tox -e bandit-sarif
+
+      - name: Upload Bandit results
+        with: github/codeql-action/upload-sarif@v2
+        with:
+          category: Bandit
+          sarif_file: bandit.sarif
+
 
   tests:
     runs-on: ubuntu-latest
@@ -89,13 +93,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install system dependencies
+      - name: Install dependencies
         run: |
           sudo apt-get install libkrb5-dev
-
-      - name: Install python dependencies
-        run: |
-          pip install tox tox-gh-actions wheel
+          pip install tox tox-gh-actions
 
       - name: Running tox
         run: tox
@@ -105,6 +106,12 @@ jobs:
         with:
           name: coverage-data
           path: '.coverage.py*'
+
+      - name: Upload coverage for py${{ matrix.python-version }}
+        uses: coverallsapp/github-action@v2
+        with:
+          flag-name: py${{ matrix.python-version }}
+          parallel: true
 
   coverage:
     runs-on: ubuntu-latest
@@ -129,20 +136,19 @@ jobs:
         with:
           python-version: 3.9
 
-      - name: Install system dependencies
+      - name: Install dependencies
         run: |
           sudo apt-get install libkrb5-dev
-
-      - name: Install python dependencies
-        run: |
           pip install tox tox-gh-actions
 
-      - name: Coverage report
+      - name: Local coverage report
         run: |
           tox -e coverage
 
-      - name: Upload to coveralls
+      - name: Complete coveralls
         uses: coverallsapp/github-action@v2
+        with:
+          parallel-finished: true
 
 
 # The end.
