--- a/setup.cfg
+++ b/setup.cfg
@@ -133,7 +133,7 @@ source-dir = docs
 
 
 [tox:tox]
-envlist = flake8,mypy,py{36,37,38,39,310,311},coverage,bandit,twine
+envlist = flake8,mypy,bandit,twine,py{36,37,38,39,310,311},coverage
 skip_missing_interpreters = true
 
 
@@ -168,10 +168,27 @@ download = false
 basepython = python3.9
 
 commands =
-  python -B -m bandit --ini setup.cfg -qr kojismokydingo/ koji_cli_plugins/
+  python -B -m bandit --ini setup.cfg \
+    -qr kojismokydingo/ koji_cli_plugins/
 
 deps =
   bandit
+
+
+[testenv:bandit-sarif]
+
+basepython = python3.9
+
+commands =
+  python -B -m bandit --ini setup.cfg \
+    -f sarif -o bandit.sarif \
+    -qr kojismokydingo/ koji_cli_plugins/
+  python -B -m sarif summary bandit.sarif
+
+deps =
+  bandit
+  bandit-sarif-formatter
+  sarif-tools
 
 
 [testenv:flake8]
@@ -192,10 +209,11 @@ skip_install = True
 basepython = python3.9
 
 commands =
-  python -B setup.py clean bdist_wheel
+  python -B -m build .
   python -B -m twine check dist/*.whl
 
 deps =
+  build
   twine
   wheel
 
@@ -241,7 +259,9 @@ commands =
   python -B setup.py build_sphinx
 
 # sphinx 7 not only doesn't have a build_sphinx command, but it also
-# completely ignores the settings in setup.cfg
+# completely ignores the settings in setup.cfg, therefore it can EABOD
+# and we'll keep using the older one via setuptools, drinking in the
+# hot deprecation tears of the setuptools devs like a fine sake
 deps =
   sphinx<7
 
