--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -60,15 +60,6 @@ jobs:
       - name: Run MyPy
         run: tox -e mypy
 
-      - name: Run Bandit
-        run: tox -e bandit-sarif
-
-      - name: Upload Bandit results
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          category: Bandit
-          sarif_file: bandit.sarif
-
   tests:
     runs-on: ubuntu-latest
 
@@ -106,12 +97,12 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: coverage-data
-          path: .coverage.py${{ matrix.python-version }}
+          path: .coverage.py*
 
       - name: Upload coverage
         uses: coverallsapp/github-action@v2
         with:
-          file: .coverage.py${{ matrix.python-version }}
+          files: .coverage.py*
           flag-name: py${{ matrix.python-version }}
           parallel: true
 
