--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get install libkrb5-dev
-          pip install tox tox-gh-actions coverage
+          pip install tox tox-gh-actions
 
       - name: Running tox
         run: |
@@ -138,7 +138,7 @@ jobs:
         with:
           file: coverage.xml
           allow-empty: true
-          base-path: ${{ github.workspace }}
+          base-path: ./
 
 
 # The end.
