--- a/setup.cfg
+++ b/setup.cfg
@@ -265,6 +265,17 @@ deps =
   sphinx<7
 
 
+[testenv:build]
+
+basepython = python3.9
+
+commands =
+  python -B -m build -n .
+
+deps =
+  build
+
+
 [nosetests]
 
 all-modules = 1
@@ -275,7 +286,6 @@ verbosity = 2
 [coverage:run]
 
 source =
-  koji_cli_plugins
   kojismokydingo
 
 omit =
