move quicktest into tox

--- a/setup.cfg
+++ b/setup.cfg
@@ -209,7 +209,7 @@ skip_install = True
 basepython = python3.9
 
 commands =
-  python -B -m build .
+  python -B -m build -n .
   python -B -m twine check dist/*.whl
 
 deps =
@@ -229,6 +229,19 @@ commands =
 deps =
   mypy
   types-pkg_resources
+
+
+[testenv:quicktest]
+
+basepython = python3.9
+
+commands =
+  python -B -I -m nose
+
+deps =
+  nose-py3
+
+download = True
 
 
 [testenv:coverage]
@@ -286,6 +299,7 @@ verbosity = 2
 [coverage:run]
 
 source =
+  koji_cli_plugins
   kojismokydingo
 
 omit =
