--- a/.github/workflows/build_rpms.yml
+++ b/.github/workflows/build_rpms.yml
@@ -1,5 +1,4 @@
-
-name: RPM Build
+name: "Build: RPMs"
 
 
 on:
@@ -8,6 +7,7 @@ on:
 
 
 jobs:
+
   build-srpm:
     runs-on: ubuntu-latest
 
@@ -22,6 +22,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
+          cache: pip
 
       - name: Install Dependencies
         run: |
@@ -82,11 +83,11 @@ jobs:
         run: |
           make archive
 
-      - name: Generate ${{ matrix.platform }} RPM
+      - name: Generate RPM ${{ matrix.platform }}
         run: |
           tools/launch-build.sh ${{ matrix.platform }}
 
-      - name: Store ${{ matrix.platform }} RPM
+      - name: Store RPM ${{ matrix.platform }}
         uses: actions/upload-artifact@v3
         with:
           name: RPMs
