--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -1,5 +1,4 @@
-
-name: Wheel Build
+name: "Build: Wheel"
 
 
 on:
@@ -8,6 +7,7 @@ on:
 
 
 jobs:
+
   build-wheel:
     runs-on: ubuntu-latest
 
@@ -27,7 +27,7 @@ jobs:
         run: |
           pip install build
 
-      - name: Build Wheel
+      - name: Generate Wheel
         run: |
           python -B -m build .
 
